--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, IGDroidActivity!</string>
+    <string name="intro">Intelligrape\'s\n Android App \n\n</string>
     <string name="app_name">IGDroid</string>
+    <string name="Enter">Enter</string>
+    <string name="contactDetails">Contact Details</string>
+    <string name="contactDetailsMail">Contact Us</string>
+    <string name="Name">Name</string>
+    <string name="Email">Email</string>
+    <string name="Subject">Subject</string>
+    <string name="Comment">Comment</string>
+    <string name="send_message">Send Message</string>
 </resources>
